# pcw_fn

./: Cargo.toml  LICENSE-MIT  README.md
src/: functional_hackery.rs  lib.rs  partial.rs
