[package]
name = "pcw_fn"
version = "0.1.2"
edition = "2021"
description = "Generic piecewise function trait and impls."
authors = ["Stefan Volz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SV-97/pcw_fn/"
keywords = ["mathematics", "math", "numerics", "piecewise", "num"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
is_sorted = "0.1.1"
itertools = "0.10.5"
num-traits = "0.2.15"
serde = { version = "1.0.152", optional = true }

[features]
serde = ["dep:serde"] # enables serde support
